# bit-sender

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.github/workflows/: tauri.yml
docs/: ERROR_DIALOG_USAGE.md
public/: index.html
scripts/: README.md  release.sh
src/: App.jsx  test-setup.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/network/: interface.rs  interface_manager.rs  mod.rs  packet_builder.rs  packet_sniffer.rs  response_monitor.rs  sequence_sender.rs
src-tauri/tests/: sequence_send_integration_test.rs
src/components/: BatchSendDialog.jsx  Button.jsx  CustomSelect.jsx  ErrorDialog.jsx  LanguageToggle.jsx  NetworkSelectModal.jsx  PacketSequenceManager.jsx  ThemeToggle.jsx  Toast.jsx
src/contexts/: BatchTaskContext.jsx  NetworkInterfaceContext.jsx  ToastContext.jsx
src/features/networkSniffer/: NetworkSniffer.jsx
src/features/packetEditor/: PacketEditor.jsx  README.md  config.js  fieldDescriptions.js  hexDumpUtils.js  hexDumpUtils.test.js  index.js  usePacketEditor.js  utils.js
src/features/responseMonitor/: ResponseMonitor.jsx
src/features/templateManager/: TemplateManager.jsx  defaultTemplates.js  defaultTemplates.test.js
src/hooks/: useLanguage.js  useNetwork.js  useSystemTheme.js  useTheme.js  useToast.js  useWindowTitle.js
src/locales/: en-US.json  index.js  index.test.js  zh-CN.json
